--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ejercicio Guiado BEM</title>
+	<!--Font Awesome-->
+	<script src="https://use.fontawesome.com/fb4df1f3f2.js"></script>
+	<!--CSS-->
+	<link rel="stylesheet" href="sass/main.css">
 	<!-- Link archivo css-->
-	
+
 </head>
+<!--Menu con las clases BEM-->
+<header>
+	<ul class="a-menu">
+		<li class="a-menu_item"><a class="a-menu_item_link" href="#">BLOG</a></li>
+		<li class="a-menu_item"><a class="a-menu_item_link" href="#">ABOUT</a></li>
+		<li class="a-menu_item"><a class="a-menu_item_link" href="#">CONTACTO</a></li>
+	</ul>
+</header>
+<section>
+	<div class="article">
+		<h2 class="article_title">Mermeladas</h2>
+		<p class="article_desc">Consequat enim reprehenderit fugiat excepteur irure.</p>
+		<img class="article_img" src="img/mermeladas pirque.jpg" alt="">
+	</div>
+
+	<div class="article article--green">
+		<h2 class="article_title">Comida Saludable</h2>
+		<p class="article_desc">Consequat enim reprehenderit fugiat excepteur irure.</p>
+		<img class="article_img" src="img/comida-vegana-230x130.jpg" alt="">
+	</div>
+
+	<div class="article article--green">
+		<h2 class="article_title">Los beneficios de la Miel</h2>
+		<p class="article_desc">Consequat enim reprehenderit fugiat excepteur irure.</p>
+		<img class="article_img" src="img/MIEL-DE-ABEJA-230x130.png" alt="">
+	</div>
+</section>
+<footer class="pie">
+	<p class="pie_item--center">
+		Create by Someone
+	</p>
+	
+</footer>
+
 <body>
 
 </body>
+
 </html>
